--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,23 +1,22 @@
 {{ define "main" }}
-{{ $headless := .Site.GetPage "/homepage" }}
-{{ $sections := $headless.Resources.ByType "page" }}
+{{ $sections := .Site.GetPage "/homepage" }}
+{{ $sections := $sections.Resources.ByType "page" }}
 {{ $sections := cond .Site.BuildDrafts $sections (where $sections "Draft" "==" false) }}
-<header id="site-head" {{ with .Params.header_image }}style="background-image: url({{ . }})"{{ end }}>
+<header id="site-head" class="full-height" {{ with .Params.header_image }}style="background-image: url(/{{ . }})"{{ end }}>
     <div class="vertical">
         <div id="site-head-content" class="inner">
-
             {{ with .Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
             {{ with .Params.header_subheadline }}<h2 class="blog-description">{{ . }}</h2>{{ end }}
 
             {{ range where $sections ".Params.header_menu" "eq" true }}
-                 <a class='btn site-menu' data-title-anchor='{{ anchorize .Title }}'>{{ .Title }}</a>
+                <a class='btn site-menu' data-title-anchor='{{ anchorize .Title }}'>{{ .Title }}</a>
             {{ end }}
-            <i id='header-arrow' class="fa fa-angle-down"></i>
+            
+            <i id='header-arrow' class='fa fa-angle-down'></i>
         </div>
     </div>
 </header>
 <main class="content" role="main">
-
     <div class='fixed-nav'>
     </div>
     {{ range $index_val, $elem_val := $sections }}
@@ -28,6 +27,24 @@
                 </header>
                 <section class="post-content">
                     {{ .Content }}
+                    {{ if .Params.addlastnews }}
+                        <table class="news">
+                            {{ $posts := .Site.GetPage "/posts" }}
+                            {{ $posts := $posts.Resources.ByType "page" }}
+                            {{ $posts := cond .Site.BuildDrafts $posts (where $posts "Draft" "==" false) }}
+                            {{ range $index_val, $elem_val := first .Params.addlastnews $posts }}
+                                <tr>
+                                    <td>{{ .Date.Format "2/1/2006" }}</td>
+                                    <td><a href="/blog/#post-{{.Name | anchorize}}">{{ .Title }}</a></td>
+                                </tr>
+                            {{ end }}
+                            {{ if .Params.allnews }}
+                                <tr>
+                                    <td colspan="2"><a href="/blog">{{ .Params.allnews }}</a></td>
+                                </tr>
+                            {{ end }}
+                        </table>
+                    {{ end }}
                 </section>
             </article>
             <div class='post-after'></div>
