--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -25,8 +25,8 @@
 @import url(normalize.css);
 
 /* ==========================================================================
-      1. Icons - Sets up the icon font and respective classes
-      ========================================================================== */
+   1. Icons - Sets up the icon font and respective classes
+   ========================================================================== */
 
 /* Import the font file with the icons in it */
 @font-face {
@@ -77,8 +77,8 @@
 }
 
 /* ==========================================================================
-      2. General - Setting up some base styles
-      ========================================================================== */
+   2. General - Setting up some base styles
+   ========================================================================== */
 
 html {
   height: 100%;
@@ -208,15 +208,15 @@ a.btn:hover {
 }
 
 #header-arrow {
-  font-size: 140px;
   margin: -10px auto;
   text-align: center;
   position: absolute;
   width: 100%;
   left: 0;
-  bottom: -120px;
   cursor: pointer;
   opacity: 0.6;
+  font-size: 140px;
+  bottom: -120px;
   transition: all ease 0.3s;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
@@ -373,7 +373,7 @@ kbd {
 table {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 1.6em 0;
+  margin: 1em 0;
   width: 100%;
   max-width: 100%;
   background-color: transparent;
@@ -385,13 +385,21 @@ table td {
   line-height: 20px;
   text-align: left;
   vertical-align: top;
-  border-top: 1px solid #efefef;
-  border-bottom: 1px solid #efefef;
+  border-top: 1px solid #3A4145;
+  border-bottom: 1px solid #3A4145;
 }
 
-table th {
-/*  color: #000; */
+.post-holder.odd table th, 
+.post-holder.odd table td {
+  border-top-color: #efefef;
+  border-bottom-color: #efefef;
 }
+
+/*
+table th {
+  color: #000;
+}
+*/
 
 table caption + thead tr:first-child th,
 table caption + thead tr:first-child td,
@@ -435,9 +443,52 @@ ul li {
   padding-top: 7px;
 }
 
+table.news td:first-child {
+  width: 0px; 
+  padding-right: 8px;
+  white-space: nowrap;
+}
+
+table.news td {
+  padding: 0px; 
+  line-height: 1.6em;
+  border: none;
+}
+
+#site-head-content table {
+  margin: 0px;
+  padding-top: 0px; 
+  padding-left: 0px; 
+}
+
+#site-head-content table td {
+  text-align: center;
+  border: none;
+  vertical-align: middle;
+}
+
+#site-head-content table td:first-child {
+  width: 0px; 
+  font-size: 60px;
+  padding-right: 20px;
+  white-space: nowrap;
+  opacity: 0.6;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+}
+
+#site-head-content table td:first-child a {
+  color: white;
+}
+
+#site-head-content table td:first-child:hover {
+  opacity: 0.9;
+}
+
 /* ==========================================================================
-      3. Utilities - These things get used a lot
-      ========================================================================== */
+   3. Utilities - These things get used a lot
+   ========================================================================== */
 
 /* Hides shit */
 .hidden {
@@ -461,20 +512,23 @@ ul li {
 }
 
 /* ==========================================================================
-      4. General - The main styles for the the theme
-      ========================================================================== */
+   4. General - The main styles for the the theme
+   ========================================================================== */
 
 /* Big cover image on the home page */
 #site-head {
   position: relative;
   display: table;
   width: 100%;
-  height: 100%;
   margin-bottom: 0rem;
   text-align: center;
   color: #fff;
   background: #b80135 no-repeat center center;
   background-size: cover;
+}
+
+#site-head.full-height {
+  height: 100%;
 }
 
 #site-head:after {
@@ -661,8 +715,8 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      5. Single Post - When you click on an individual post
-      ========================================================================== */
+   5. Single Post - When you click on an individual post
+   ========================================================================== */
 
 /* Tweak the .post wrapper style */
 .post-template .post {
@@ -735,8 +789,8 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      6. Third Party Elements - Embeds from other services
-      ========================================================================== */
+   6. Third Party Elements - Embeds from other services
+   ========================================================================== */
 
 /* Github */
 
@@ -751,8 +805,8 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      7. Pagination - Tools to let you flick between pages
-      ========================================================================== */
+   7. Pagination - Tools to let you flick between pages
+   ========================================================================== */
 
 /* The main wrapper for our pagination links */
 .pagination {
@@ -801,8 +855,8 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      8. Footer - The bottom of every page
-      ========================================================================== */
+   8. Footer - The bottom of every page
+   ========================================================================== */
 
 .site-footer {
   position: relative;
@@ -917,8 +971,8 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      9. Media Queries - Smaller than 1130px
-      ========================================================================== */
+   9. Media Queries - Smaller than 1130px
+   ========================================================================== */
 
 @media only screen and (max-width: 1130px) {
   .fixed-nav {
@@ -948,8 +1002,11 @@ a.fn-item.active {
     box-sizing: border-box;
     min-height: 240px;
     padding: 15% 0;
-    height: 100%;
     margin-bottom: 0rem;
+  }
+
+  #site-head.full-height {
+    height: 100%;
   }
 
   .blog-title {
@@ -994,8 +1051,8 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      10. Media Queries - Smaller than 500px
-      ========================================================================== */
+   10. Media Queries - Smaller than 500px
+   ========================================================================== */
 
 @media only screen and (max-width: 500px) {
   .fixed-nav {
@@ -1025,8 +1082,11 @@ a.fn-item.active {
 
   #site-head {
     padding: 10% 0;
-    height: 65%;
   }
+  #site-head.full-height {
+    height: 100%;
+  }
+
   #header-arrow {
     display: none;
   }
@@ -1106,6 +1166,6 @@ a.fn-item.active {
 }
 
 /* ==========================================================================
-      End of file. Media queries should be the last thing here. Do not add stuff
-      below this point, or it will probably fuck everything up.
-      ========================================================================== */
+   End of file. Media queries should be the last thing here. Do not add stuff
+   below this point, or it will probably fuck everything up.
+   ========================================================================== */
