--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -21,6 +21,7 @@
 <main class="content" role="main">
     {{ range $index_val, $elem_val := $posts }}
         <div class='post-holder'>
+            <article class="post">
                 <header class="post-header">
                     <a id="post-{{.Name | anchorize}}"></a>
                     <h2 class="post-title">{{ .Title }}</h2>
