--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -8,7 +8,9 @@
         <div id="site-head-content" class="inner">
             <table>
                 <td>
-                    <a href="/"><i id='header-home' class='fa fa-angle-left'></i></a>
+                    <a href="/">
+                        <i id='header-home' class='fa fa-angle-left'></i>
+                    </a>
                 </td>
                 <td>
                     {{ with $main.Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
@@ -25,7 +27,7 @@
                 <header class="post-header">
                     <a id="post-{{.Name | anchorize}}"></a>
                     <h2 class="post-title">{{ .Title }}</h2>
-                    <h2 class="post-date">{{ .Date.Format "2/1/2006" }}</h2>
+                    <h6 class="post-date">{{ .Date.Format "2/1/2006" }}</h6>
                 </header>
                 <section class="post-content">
                     {{ .Content }}
