--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
         <div id="site-head-content" class="inner">
             <table>
                 <td>
-                    <a href="/"><i id='header-home' class='fa fa-angle-left'></i></a>
+                    <a href="../"><i id='header-home' class='fa fa-angle-left'></i></a>
                 </td>
                 <td>
                     {{ with $main.Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
