--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
             {{ with .Params.header_subheadline }}<h2 class="blog-description">{{ . }}</h2>{{ end }}
 
             {{ range where $sections ".Params.header_menu" "eq" true }}
-                <a class='btn site-menu' data-title-anchor='{{ anchorize .Title }}'>{{ .Title }}</a>
+                <a class='btn site-menu' data-target-id='{{ anchorize .Title }}'>{{ .Title }}</a>
             {{ end }}
             
             <i id='header-arrow' class='fa fa-angle-down'></i>
@@ -18,10 +18,13 @@
 </header>
 <main class="content" role="main">
     <div class='fixed-nav'>
+        {{ range $index_val, $elem_val := $sections }}
+            <a class='fn-item' data-target-id='{{ anchorize .Title }}'>{{.Title}}</a>
+        {{ end }}
     </div>
     {{ range $index_val, $elem_val := $sections }}
         <div class='post-holder'>
-            <article id='{{ anchorize .Title }}' class='post {{ if eq $index_val 0 }}first{{ end }} {{ if eq (add $index_val 1) (len $sections) }}last{{ end }}'>
+            <article id='{{ anchorize .Title }}' class='post'>
                 <header class="post-header">
                     <h2 class="post-title">{{ .Title }}</h2>
                 </header>
