--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,6 +20,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <link rel="stylesheet" href="{{ "css/screen.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/media-1130.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/media-500.css" | absURL }}" />
 <link rel="stylesheet" href="{{ "css/fonts.css" | absURL }}" type="text/css" />
 <link
   rel="stylesheet"
