--- a/static/css/media-1130.css
+++ b/static/css/media-1130.css
@@ -1,14 +1,11 @@
 @media only screen and (max-width: 1130px) {
   .fixed-nav {
-    opacity: 1;
-    position: fixed;
-    top: 0px;
     left: 0px;
-    z-index: 99999;
-    background: #f2efe8;
     width: 100%;
     text-align: center;
+    top: -4px;
     padding: 4px;
+    padding-top: 8px;
   }
   
   a.fn-item {
