--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,27 +1,7 @@
 {{ define "main" }}
-{{ $main := .Site.GetPage "/" }}
-<header id="site-head" {{ with $main.Params.header_image }}style="background-image: url({{ . }})"{{ end }}>
-    <div class="vertical">
-        <div id="site-head-content" class="inner">
-            <table>
-                <td>
-                    <a href="../"><i id='header-home' class='fa fa-angle-left'></i></a>
-                </td>
-                <td>
-                    {{ with $main.Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
-                    {{ with $main.Params.header_subheadline }}<h2 class="blog-description">{{ . }}</h2>{{ end }}
-                </td>
-            </table>
-        </div>
-    </div>
-</header>
+{{ partial "single_header.html" . }}
 <main class="content page-template page-{{ .Slug }}" role="main">
   <article class="post page">
-    <!--header class="post-header">
-      <a id="blog-logo" href="{{ "/" | relURL }}">
-        {{ .Site.Title }}
-      </a>
-    </header-->
     <h1 class="post-title">{{ .Title }}</h1>
     <section class="post-content">
       {{ .Content }}
