--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -5,18 +5,19 @@
 
 :root {
   --head-color: #fff;
+  --head-shadow-color: #000;
   
   --fixed-nav-background: rgba(255, 255, 255, 0.95);
-  --a-hover-color: #86c440;
   
-  --btn-background: #9fd067;
+  --a-active-color: #9fd067;
+  --a-hover-color: #86c440;
   --btn-color: #fff;  
   
-  --odd-color: #3a4145;
-  --even-color: #f2efe8;
-  
   --odd-background-color: #b80135;
+  --odd-color: #f2efe8;
+  
   --even-background-color: #f2efe8;
+  --even-color: #3a4145;
  
   --sel-color: #222;
   --sel-background: #d6edff;
@@ -42,7 +43,7 @@ body {
   font-family: "Roboto Slab", serif;
   font-size: 2rem;
   line-height: 1.6em;
-  color: var(--odd-color);
+  color: var(--even-color);
 }
 
 ::-moz-selection, 
@@ -65,14 +66,6 @@ h6 {
   font-family: "Open Sans", sans-serif;
 }
 
-h3,
-h4,
-h5,
-h6 {
-  line-height: 120%;
-  margin-bottom: 0%;
-}
-
 h1 {
   font-size: 5rem;
   letter-spacing: -2px;
@@ -83,6 +76,14 @@ h2 {
   font-size: 4rem;
   letter-spacing: -1px;
   text-indent: -2px;
+}
+
+h3,
+h4,
+h5,
+h6 {
+  line-height: 120%;
+  margin-bottom: 0%;
 }
 
 h3 {
@@ -129,7 +130,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid var(--odd-color);
+  border-top: 1px solid var(--even-color);
   margin: 3.2em 0;
   padding: 0;
 }
@@ -157,8 +158,8 @@ table td {
   line-height: 20px;
   text-align: left;
   vertical-align: top;
-  border-top: 1px solid var(--odd-color);
-  border-bottom: 1px solid var(--odd-color);
+  border-top: 1px solid var(--even-color);
+  border-bottom: 1px solid var(--even-color);
 }
 
 table caption + thead tr:first-child th,
@@ -222,6 +223,10 @@ blockquote p {
   height: 100%;
 }
 
+#site-head-content h1, #site-head-content h2 {
+  text-shadow: 0px 0px 8px var(--head-shadow-color);
+}
+
 #site-head-content table {
   margin: 0px;
   padding-top: 0px; 
@@ -250,7 +255,7 @@ blockquote p {
 }
 
 a.btn {
-  background-color: var(--btn-background);
+  background-color: var(--a-active-color);
   color: var(--btn-color);
   text-decoration: none;
   border-radius: 6px;
@@ -316,7 +321,7 @@ a.btn {
   opacity: 0.7;
 }
 .fn-item.active {
-  color: var(--a-hover-color);
+  color: var(--a-active-color);
   opacity: 1;
 }
 
@@ -325,16 +330,17 @@ a.btn {
   height: 100%;
   position: relative;
   background: var(--even-background-color);
+  color: var(--even-color);
 }
 .post-holder:nth-child(odd) {
   background: var(--odd-background-color);
-  color: white;
+  color: var(--odd-color);
 }
 
 .post-holder:nth-child(odd) table th, 
 .post-holder:nth-child(odd) table td {
-  border-top-color: #efefef;
-  border-bottom-color: #efefef;
+  border-top-color: var(--odd-color);
+  border-bottom-color: var(--odd-color);
 }
 
 .post {
@@ -403,21 +409,25 @@ table.news td:first-child {
   text-decoration: underline;
 }
 
+
+/* Use hover only on devices with real hover */
+
 @media (hover: hover) and (pointer: fine) {
-  .fn-item:hover {
-    color: var(--btn-background);
+  a.fn-item:hover {
+    color: var(--a-hover-color);
   }
   
   a:hover {
     color: var(--a-hover-color);
   }
+
+  a.btn:hover {
+    color: var(--btn-color);
+    background: var(--a-hover-color);
+  }
   
   #site-head-content table td:first-child:hover {
     opacity: 0.9;
-  }
-  
-  a.btn:hover {
-    background: var(--a-hover-color);
   }
   
   #header-arrow:hover {
