--- a/layouts/partials/single_header.html
+++ b/layouts/partials/single_header.html
@@ -1,10 +1,10 @@
 {{ $main := .Site.GetPage "/" }}
-<header id="site-head" {{ with $main.Params.header_image }}style="background-image: url(../{{ . }})"{{ end }}>
+<header id="site-head" {{ with $main.Params.header_image }}style='background-image: url({{ . | absURL }})'{{ end }}>
     <div class="vertical">
         <div id="site-head-content" class="inner">
             <table>
                 <td>
-                    <a href="../"><i id='header-home' class='fa fa-angle-left'></i></a>
+                    <a href='{{ "." | absURL }}'><i id='header-home' class='fa fa-angle-left'></i></a>
                 </td>
                 <td>
                     {{ with $main.Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
