--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
 {{ partial "single_header.html" . }}
 <main class="content page-template page-{{ .Slug }}" role="main">
-  <article class="post page">
-    <h1 class="post-title">{{ .Title }}</h1>
-    <section class="post-content">
-      {{ .Content }}
-    </section>
-  </article>
+  <div class='post-holder'>
+    <article class="post page">
+      <h1 class="post-title">{{ .Title }}</h1>
+      <section class="post-content">
+        {{ .Content }}
+      </section>
+    </article>
+  </div>
 </main>
 {{ end }}
