--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -135,14 +135,6 @@ hr {
   padding: 0;
 }
 
-li {
-  margin-left: 30px;
-}
-
-ul li {
-  list-style-type: none;
-}
-
 table {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -278,12 +270,14 @@ a.btn {
   margin: -10px auto;
   text-align: center;
   position: absolute;
+  z-index: 10000;
   width: 100%;
   left: 0;
   cursor: pointer;
   opacity: 0.6;
   font-size: 140px;
   bottom: -120px;
+  text-shadow: 0px 0px 8px var(--head-shadow-color);
   transition: all ease 0.3s;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
@@ -341,6 +335,10 @@ a.btn {
 .post-holder:nth-child(odd) table td {
   border-top-color: var(--odd-color);
   border-bottom-color: var(--odd-color);
+}
+
+.post-holder:nth-child(odd) hr {
+  border-top-color: var(--odd-color);
 }
 
 .post {
